# wgpu-flight

./: .gitignore  Cargo.toml
src/: bobbins.rs  game.rs  generator.rs  gpu.rs  hasher.rs  lib.rs  main.rs  math.rs  octree.rs  player.rs  render.rs  world.rs
src/math/: direction.rs  octree.rs
src/render/: globals.rs  mod.rs  sdf.rs  sdfcompute.wgsl  sdfrender.wgsl  shader.wgsl  terrain.rs
src/world/: chunk.rs  sdftest.rs
